--- a/Bs.Main.FrontEnd.VoucherTracker/Bs.Main.FrontEnd.VoucherTracker.csproj
+++ b/Bs.Main.FrontEnd.VoucherTracker/Bs.Main.FrontEnd.VoucherTracker.csproj
@@ -13,6 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Bs.Common\Bs.Common.csproj" />
+    <ProjectReference Include="..\Bs.MasterlistModule.FrontEnd\Bs.MasterlistModule.FrontEnd.csproj" />
     <ProjectReference Include="..\Bs.VoucherModule.FrontEnd\Bs.VoucherModule.FrontEnd.csproj" />
   </ItemGroup>
 
