--- a/Bs.Main/Bs.Main.csproj
+++ b/Bs.Main/Bs.Main.csproj
@@ -7,8 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="images\accept.png" />
+    <None Remove="images\add.png" />
+    <None Remove="images\delete.png" />
+    <None Remove="images\world_delete.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Remove="images\AddButton.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="7.1.2" />
     <PackageReference Include="Humanizer" Version="2.14.1" />
+    <PackageReference Include="MahApps.Metro.IconPacks.MaterialLight" Version="4.11.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.17">
       <PrivateAssets>all</PrivateAssets>
@@ -30,6 +42,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="images\accept.png" />
+    <Resource Include="images\add.png" />
+    <Resource Include="images\AddButton.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Resource>
+    <Resource Include="images\delete.png" />
+    <Resource Include="images\world_delete.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Modules\VoucherModule\Views\SelectCompanyAccountWindow.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -39,6 +61,18 @@
     <Compile Update="Modules\VoucherModule\Views\VoucherListingView.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
