--- a/Bs.Main/Bs.Main.csproj
+++ b/Bs.Main/Bs.Main.csproj
@@ -100,6 +100,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Modules\AuthModule\ViewModels\" />
+    <Folder Include="Modules\AuthModule\Views\" />
+    <Folder Include="Modules\AuthModule\Models\" />
+    <Folder Include="Modules\AuthModule\Commands\" />
     <Folder Include="Modules\MasterlistModule\Commands\" />
   </ItemGroup>
 
